[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-issue-creator"
version = "0.1.0"
description = "A Python library for creating GitHub issues programmatically using the GitHub REST API."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Bruno Peselli", email = "brunopeselli@gmail.com"},
]
dependencies = [
    "requests",
    "pydantic==2.11.5"
]
